--- a/css/find.css
+++ b/css/find.css
@@ -39,8 +39,8 @@ html,body{
 .banner .swiper-pagination-bullet {
     display: inline-block;
     border-radius: 50%;
-    background: #333;
-    opacity: 0.4;
+    background: #ccc;
+    opacity: 0.8;
 }
 .swiper-pagination{
 	width:100%;height:0.9rem;
@@ -53,7 +53,7 @@ html,body{
     background: #FFF;
 }
 .banner .swiper-slide img{
-	width:100%;
+	height:100%;
 }
 .search{
 	width:100%;height:1rem;background:#fff;border-top:0.02rem solid #ccc;border-bottom:0.02rem solid #ccc;margin-top:0.3rem;line-height: 0.8rem;font-size: 0.3rem;
