--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,30 @@ body{
 html,body{
 	width:7.5rem;height:13.34rem;overflow: hidden;
 }
+/*kaishiye*/
+.start{
+	width:7.5rem;height:13.34rem;background: url(../img/bg.jpg) center;background-size: cover;animation: bg 2s ease .5s forwards;
+}
+.start-con{
+	position: absolute;bottom:1.8rem;left:0;right:0;margin:auto;text-align: center;color:#fff;
+}
+.start-con h1{
+	font-size: 0.6rem;
+}
+.start-con h1 .iconfont{
+	font-size:0.7rem;margin-right:0.2rem;
+}
+.start-con p{
+	font-size: 0.3rem;
+}
+@keyframes bg{
+	0%{
+		transform: scale(1,1);
+	}
+	100%{
+		transform: scale(1.5,1.5);
+	}
+}
 /*首页*/
 .iconfont{
 	font-size: 0.4rem;
@@ -39,8 +63,8 @@ html,body{
 .banner .swiper-pagination-bullet {
     display: inline-block;
     border-radius: 50%;
-    background: #333;
-    opacity: 0.4;
+    background: #ccc;
+    opacity: 0.7;
 }
 .swiper-pagination{
 	width:100%;height:0.9rem;
