--- a/css/shequ.css
+++ b/css/shequ.css
@@ -151,5 +151,5 @@ border:0}
 	font-size:0.3rem;color:#ccc;border:0;
 }
 .publish .iconfont{
-	margin:2rem 0 0.5rem 0.3rem;
+	margin-top:2rem;font-size:0.6rem;
 }
