--- a/css/show.css
+++ b/css/show.css
@@ -58,16 +58,16 @@ header a{
 	width: 0.8rem;height:0.8rem;box-shadow: 0 0 0.5rem #999;border-radius: 50%;text-align: center;line-height: 0.9rem;position:absolute;top:0;bottom:0;left:4.85rem;margin:auto;color:#888;
 }
 .btn .progress-time{
-	position: absolute;right:0;top:0;bottom:0;margin:auto;font-size:0.25rem;color:#999;line-height: 1.8rem;
+	position: absolute;right:0.1rem;top:0;bottom:0;margin:auto;font-size:0.25rem;color:#999;line-height: 1.8rem;
 }
 .btn .progress{
 	width: 7.5rem;height:0.1rem;background:#ccc;position: absolute;bottom:0;left:0;
 }
 .btn .progress-con{
-	width: 6.7rem;height:0.1rem;background:#F1CAAD;position: absolute;bottom:0;left:0;
+	width: 0rem;height:0.1rem;background:#F1CAAD;position: absolute;bottom:0;left:0;
 }
 .btn .progress-circle{
-	width:0.35rem;height:0.35rem;background:#fff;border:0.03rem solid #999;border-radius: 50%;position: absolute;bottom:-0.17rem;left:0.2rem;
+	width:0.35rem;height:0.35rem;background:#fff;border:0.03rem solid #999;border-radius: 50%;position: absolute;bottom:-0.17rem;left:0;
 }
 .author{
 	width:7.5rem;box-sizing: border-box;padding: 0.4rem 0.3rem;
@@ -104,7 +104,7 @@ footer .active{
 	background:#282C2E;
 }
 footer .foot-more{
-	width:2.3rem;height:2.5rem;background:#373B3D;position: absolute;top:-3rem;right:0.3rem;border-radius:0.15rem;box-sizing: border-box;padding:0 0.3rem; display: none;
+	width:2.5rem;height:2.5rem;background:#373B3D;position: absolute;top:-3rem;right:0.3rem;border-radius:0.15rem;box-sizing: border-box;padding:0 0.3rem; display: none;
 }
 footer .foot-more li{
 	line-height: 1.25rem;text-align: center;
